# hired

./: .buildinfo  .gitignore  CHANGELOG.md  JOB_SEARCH_README.md  README.md  RENDERING_README.md  WORKFLOW_FEATURES.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  table_of_contents.html
.claude/: CLAUDE.md
.claude/agents/: hired-alignment-report.md  hired-alignment-review.md  hired-company-research.md  hired-interview-prep.md  hired-profile-ingest.md  hired-requirement-analyst.md
.claude/skills/: hired-align  hired-dev  hired-interview-prep  hired-usage
.claude/skills/hired-align/: SKILL.md
.claude/skills/hired-interview-prep/: SKILL.md
.claude/skills/hired-usage/: SKILL.md
.github/workflows/: ci.yml
_modules/: index.html
_modules/hired/: _converters.html  ats_checker.html  base.html  config.html  content.html  cover_letter.html  job_utils.html  matching.html  resume_agent.html  resumejson_pydantic_models.html  tools.html  tracking.html  util.html  validators.html
_modules/hired/alignment/: base.html  diff.html  elicitation.html  report.html  rubric.html
_modules/hired/candidate/: base.html  ingest.html  knowledge_base.html  refresh.html  state.html  topics.html  workspace.html
_modules/hired/persistence/: base.html  migrate.html  repository.html
_modules/hired/renderers/: html.html  rendercv.html  w_rendercv.html
_modules/hired/search/: base.html  facade.html  registry.html
_modules/hired/search/sources/: adzuna.html  jobspy.html  usajobs.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: hired.rst.txt
_sources/module_docs/hired/: _converters.rst.txt  alignment.rst.txt  ats_checker.rst.txt  base.rst.txt  candidate.rst.txt  config.rst.txt  content.rst.txt  cover_letter.rst.txt  job_utils.rst.txt  matching.rst.txt  persistence.rst.txt  render.rst.txt  renderers.rst.txt  resume_agent.rst.txt  resumejson_pydantic_models.rst.txt  search.rst.txt  tools.rst.txt  tracking.rst.txt  util.rst.txt  validators.rst.txt
_sources/module_docs/hired/alignment/: base.rst.txt  diff.rst.txt  elicitation.rst.txt  report.rst.txt  rubric.rst.txt
_sources/module_docs/hired/candidate/: base.rst.txt  ingest.rst.txt  knowledge_base.rst.txt  refresh.rst.txt  state.rst.txt  topics.rst.txt  workspace.rst.txt
_sources/module_docs/hired/persistence/: base.rst.txt  migrate.rst.txt  repository.rst.txt
_sources/module_docs/hired/renderers/: html.rst.txt  rendercv.rst.txt  w_rendercv.rst.txt
_sources/module_docs/hired/search/: base.rst.txt  facade.rst.txt  registry.rst.txt  sources.rst.txt
hired/: __init__.py  _converters.py  ats_checker.py  base.py  config.py  content.py  cover_letter.py  job_utils.py  matching.py  render.py  resume_agent.py  resumejson_pydantic_models.py  tools.py  tracking.py  util.py  validators.py
hired/alignment/: __init__.py  base.py  diff.py  elicitation.py  report.py  rubric.py
hired/candidate/: __init__.py  base.py  ingest.py  knowledge_base.py  refresh.py  state.py  topics.py  workspace.py
hired/data/resume_jsons/: test_resume.json
hired/data/resume_renderings/: test_resume_html_startbootstrap.html  test_resume_md_elegant.md
hired/data/schemas/: old_resume_schema.json  resume_schema.json
hired/data/themes/awesomecv-lite/: index.html
hired/data/themes/classic/: EducationEntry.j2.typ  NumberedEntry.j2.typ  Preamble.j2.typ  PublicationEntry.j2.typ  ReversedNumberedEntry.j2.typ  SectionEnding.j2.typ  TextEntry.j2.typ
hired/data/themes/elegant/: index.html
hired/data/themes/startbootstrap/: index.html  (+1 more)
hired/persistence/: __init__.py  base.py  migrate.py  repository.py
hired/renderers/: __init__.py  html.py  rendercv.py  w_rendercv.py
hired/search/: __init__.py  base.py  facade.py  registry.py
hired/search/sources/: __init__.py  adzuna.py  jobspy.py  usajobs.py
hired/tests/: TEST_NOTES.md  test_base.py  test_config.py  test_content.py  test_custom_template.py  test_freeform.py  test_integration.py  test_packaged_themes.py  test_pdf_css_inclusion.py  test_plugin_system.py  test_real_example.py  test_render.py  test_render_templates.py  test_util.py  test_validators.py
hired/tests/fixtures/: candidate.json  job.yaml  rc_real_example_resume.yaml  rc_real_example_resume_without_design.yaml  real_example_resume.json  real_example_resume.yaml
hired/themes/: default.html  minimal.html
misc/: John_Doe_CV.yaml  comparing_jsonschema_and_pydantic_validation.ipynb  data.json  debug_full_rendercv.yaml  debug_rendercv.yaml  hired_resume_session_demo.ipynb  hired_wip.ipynb  real_example_resume.json  rendercv_example.yaml  resume_models.py  resume_models_manual.py  resume_models_transformed.py  schema.json
misc/docs/: DESIGN.md
misc/docs/research/: elicitation-and-knowledge-store.md  jd-candidate-matching.md  skills-taxonomy-and-adjacency.md
misc/generated_models/: models.py
misc/rendercv_output/: John_Doe_CV.html  John_Doe_CV.md  John_Doe_CV.typ
module_docs/: hired.html
module_docs/hired/: _converters.html  alignment.html  ats_checker.html  base.html  candidate.html  config.html  content.html  cover_letter.html  job_utils.html  matching.html  persistence.html  render.html  renderers.html  resume_agent.html  resumejson_pydantic_models.html  search.html  tools.html  tracking.html  util.html  validators.html
module_docs/hired/alignment/: base.html  diff.html  elicitation.html  report.html  rubric.html
module_docs/hired/candidate/: base.html  ingest.html  knowledge_base.html  refresh.html  state.html  topics.html  workspace.html
module_docs/hired/persistence/: base.html  migrate.html  repository.html
module_docs/hired/renderers/: html.html  rendercv.html  w_rendercv.html
module_docs/hired/search/: base.html  facade.html  registry.html  sources.html
skills/hired-align/: SKILL.md
skills/hired-dev/: SKILL.md
tests/: test_ai_and_render.py  test_candidate_alignment.py  test_import_safety.py  test_knowledge.py  test_refresh.py  test_resume_agent_plan.py  test_search.py  test_storage_v2.py  test_workflow_features.py
(+6 files in other folders)
