[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "hired"
version = "0.0.15"
description = "\nStreamline the job application process for job seekers - with AI obvs!"
readme = "README.md"
requires-python = ">=3.10"
keywords = []
authors = [
    { name = "Thor Whalen" },
]
dependencies = [
    "pydantic[email]>=2.0",
    "jinja2>=3.0",
    "jsonschema>=4.0",
    "PyYAML>=6.0",
    "requests>=2.28.0",
    "i2",
    # dol is the SSOT for hired's persistence layer (candidate knowledge base,
    # alignment reports, application tracking, agent sessions). Pure-Python and
    # lightweight; no secrets read at import. See misc/docs/DESIGN.md §3-4.
    "dol",
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/thorwhalen/hired"

[project.optional-dependencies]
testing = []
# PDF rendering via WeasyPrint (needs system libs: cairo/pango/gdk-pixbuf).
pdf = [
    "weasyprint>=58.0",
]
# High-quality (LaTeX/Typst) rendering via rendercv.
rendercv = [
    "rendercv>=1.2",
    "jsonresume-to-rendercv",
    "pyyaml>=6.0",
]
# Multi-board job search.
search = [
    "python-jobspy>=1.1.50",
]
# Real LLM resume tailoring (LLMResumeAgent / resume_agent); openai is the
# primary path.
ai = [
    "openai>=1.0",
]
# Optional LangChain-powered supervisor path in resume_agent.
supervisor = [
    "langchain",
    "langchain-core",
    "langchain-openai",
]
all = [
    "weasyprint>=58.0",
    "rendercv>=1.2",
    "jsonresume-to-rendercv",
    "pyyaml>=6.0",
    "python-jobspy>=1.1.50",
    "openai>=1.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "**/*.ipynb",
    ".git",
    ".venv",
    "build",
    "dist",
    "tests",
    "examples",
    "scrap",
]

[tool.ruff.lint]
select = [
    "D100",
]
ignore = [
    "D203",
    "E501",
    "B905",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "D",
]
"**/examples/*" = [
    "D",
]
"**/scrap/*" = [
    "D",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
]

[tool.wads.ci]
project_name = ""

[tool.wads.ci.commands]
pre_test = []
test = []
post_test = []
lint = []
format = []

[tool.wads.ci.env]
required_envvars = []
test_envvars = []
extra_envvars = []

[tool.wads.ci.env.defaults]

[tool.wads.ci.quality.ruff]
enabled = true

[tool.wads.ci.quality.black]
enabled = false

[tool.wads.ci.quality.mypy]
enabled = false

[tool.wads.ci.testing]
enabled = true
python_versions = [
    "3.10",
    "3.12",
]
pytest_args = [
    "-v",
    "--tb=short",
]
coverage_enabled = true
coverage_threshold = 0
coverage_report_format = [
    "term",
    "xml",
]
exclude_paths = [
    "examples",
    "scrap",
    # These modules' docstrings carry illustrative usage snippets (referencing
    # external resources / undefined names), not runnable doctests, so they are
    # excluded from `--doctest-modules`. Their behaviour is covered by the unit
    # tests in tests/ and hired/tests/. (Follow-up: convert to real doctests.)
    "hired/ats_checker.py",
    "hired/cover_letter.py",
    "hired/matching.py",
    "hired/tools.py",
    "hired/tracking.py",
    "hired/search/__init__.py",
    "hired/search/facade.py",
    "hired/resume_agent.py",
]
test_on_windows = true

[tool.wads.ci.metrics]
enabled = true
config_path = ".github/umpyre-config.yml"
storage_branch = "code-metrics"
python_version = "3.10"
force_run = false

[tool.wads.ci.build]
sdist = true
wheel = true

[tool.wads.ci.publish]
enabled = true
skip_ci_marker = "[skip ci]"
publish_marker = "[publish]"

[tool.wads.ci.docs]
enabled = true
builder = "epythet"
ignore_paths = [
    "tests/",
    "scrap/",
    "examples/",
]
