[metadata]
name = hired
version = 0.0.10
url = https://github.com/thorwhalen/hired
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = mit
author = Thor Whalen
description = 
		Streamline the job application process for job seekers - with AI obvs!
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = hired

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	pydantic>=2.0
	jinja2>=3.0
	jsonschema>=4.0
	PyYAML>=6.0
	requests>=2.28.0

[options.extras_require]
testing = 
		
pdf = 
	weasyprint>=58.0
rendercv = 
	rendercv>=1.2
	pyyaml>=6.0
search = 
	python-jobspy>=1.1.50
all = 
	weasyprint>=58.0
	rendercv>=1.2
	pyyaml>=6.0
	python-jobspy>=1.1.50

